# embSysProject

./: Cargo.toml  README.md  golf_info.json  map_info.json  three-panel-golf.py
map/: golf_info.json
src/: bluetooth_server.rs  golf_game.rs  l2cap.inc  main.rs
