[package]
name = "we_golf_server"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bluer = {version="0.17.1", features=["full"]}
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = {version="1.37.0", features=["full"]}
uuid = "1.8.0"

